--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@mixin scrollbar()
+    &::-webkit-scrollbar
+        border-radius: 10px
+        height: 10px
+        width: 15px
+
+    &::-webkit-scrollbar-thumb
+        background: linear-gradient(0deg, rgba(151,71,255,1) 0%, rgba(112,230,28,1) 100%)
+        border-radius: 10px
+
+    &::-webkit-scrollbar-track
+        background: #141D2F
+
+body
+    margin: 0
+    font-family: 'Poppins', sans-serif
+    @include scrollbar()
+
+html
+    scroll-behavior: smooth
