--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -3,6 +3,10 @@
     background-color: #141D2F
     height: 291px
     color: #fff
+    padding: 0 170px 0 200px
+    a
+        text-decoration: none
+        
 
 .logo
     display: flex
@@ -25,3 +29,25 @@
          content: 'ı'
          position: absolute
          left: -1px
+
+.footer_sub
+    margin-top: 60px 
+    display: flex
+    align-items: center
+    justify-content: space-between
+    
+    span
+        font-size: 23px
+    img
+        transition: 200ms
+        margin-right: 30px
+        &:hover
+            transform: scale(1.2)
+    
+
+.impressum
+    color: #fff
+    font-size: 16px
+    font-weight: 400
+    &:hover
+        color: #70E61C
