--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -119,7 +119,7 @@
 .arrow_up
     cursor: pointer
     margin-top: 100px
-    margin-left: 89%
+    margin-left: 580px
     &:hover 
         filter: invert(59%) sepia(94%) saturate(415%) hue-rotate(50deg) brightness(108%) contrast(92%)
 
