--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,20 @@
 <footer class="footer">
-    <div class="logo">
-        S<div class="i"></div>lvi<p>o</p>
-    </div>
-    <span>
-        © Silvio Schriefl 2023
-    </span>
-    <div>
-        <img src="/assets/img/git.png" alt="">
-        <img src="/assets/img/Email button.png" alt="">
-        <img src="/assets/img/Linkedin button.png" alt="">
+    <div class="footer_sub">
+        <a href="#header">
+            <div class="logo">
+                S<div class="i"></div>lvi<p>o</p>
+            </div>
+            <div>
+                <a class="impressum" routerLink="./impressum">Impressum</a>
+            </div>
+        </a>
+        <span>
+            © Silvio Schriefl 2023
+        </span>
+        <div class="icons">
+            <a href=""><img src="/assets/img/git.png" alt=""></a>
+            <a href=""><img src="/assets/img/Email button.png" alt=""></a>
+            <a href=""><img src="/assets/img/Linkedin button.png" alt=""></a>
+        </div>
     </div>
 </footer>
