--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,7 @@
     <div class="link">
         <a href="">About me</a>
         <a href="">Skills</a>
-        <a href="">Portfolio</a>
+        <a href="#portfolio">Portfolio</a>
+        <a routerLink="">Home</a>
     </div>
 </header>
