--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,23 +2,38 @@
     <img class="shadow" src="/assets/img/Purple shadow 2.png" alt="">
     <div class="circle_div">
         <img src="/assets/img/kreis.png" alt="">
-        <img src="/assets/img/LINE .png" alt=""> 
+        <img class="line" src="/assets/img/LINE .png" alt="">
         <div class="profil_img">
-            <img  src="/assets/img/profil2.png" alt="">
+            <img src="/assets/img/profil2.png" alt="">
         </div>
     </div>
-    <div class="headline">
-        About me
-        <div class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates commodi iure dolorem vitae placeat asperiores pariatur animi quod minus. Dignissimos quas qui consectetur laudantium ducimus beatae excepturi sunt soluta aliquam.
+    <div class="about_me">
+        <div class="about_me_sub">
+            <div class="headline">
+                About me
+                <div class="description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates commodi iure dolorem vitae
+                    placeat
+                    asperiores pariatur animi quod minus. Dignissimos quas qui consectetur laudantium ducimus beatae
+                    excepturi sunt soluta aliquam.
+                </div>
+            </div>
+            <div class="description2">
+                <img src="/assets/img/glühbirne.svg" alt="">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet impedit adipisci amet
+                blanditiis.
+                Laborum, beatae ipsum totam delectus officiis sunt explicabo unde voluptas veritatis eum voluptates
+                ratione
+                rerum repellendus.
+            </div>
+            <div class="description2">
+                <img src="/assets/img/puzzle.svg" alt="">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet impedit adipisci amet
+                blanditiis.
+                Laborum, beatae ipsum totam delectus officiis sunt explicabo unde voluptas veritatis eum voluptates
+                ratione
+                rerum repellendus.
+            </div>
         </div>
-    </div>
-    <div class="description2" >
-        <img src="/assets/img/glühbirne.svg" alt="">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet impedit adipisci amet blanditiis. Laborum, beatae ipsum totam delectus officiis sunt explicabo unde voluptas veritatis eum voluptates ratione rerum repellendus.
-    </div>
-    <div class="description2" >
-        <img src="/assets/img/puzzle.svg" alt="">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet impedit adipisci amet blanditiis. Laborum, beatae ipsum totam delectus officiis sunt explicabo unde voluptas veritatis eum voluptates ratione rerum repellendus.
     </div>
 </div>
