--- a/src/app/about-me/about-me.component.sass
+++ b/src/app/about-me/about-me.component.sass
@@ -2,11 +2,12 @@
     color: #fff
     background-color: #141D2F
     width: 100%
+    
 
 .headline
     font-size: 90px
     font-weight: 700
-    margin-left: 100px
+    
 
 .description
     font-size: 16px
@@ -17,7 +18,6 @@
     display: flex
     font-size: 16px
     width: 480px
-    margin-left: 100px
     img
         margin-right: 20px
 
@@ -25,6 +25,7 @@
     position: absolute
     top: 750px
     right: 0
+    z-index: 2
 
 .circle_div
     position: absolute
@@ -32,6 +33,20 @@
     align-items: center
     right: 0
     top: 1100px
+    z-index: 2
+
+.about_me
+    margin-left: 300px
+    position: relative
+    height: 600px
+
+.about_me_sub
+    position: absolute
+    z-index: 2
+
+.line
+    width: 350px
+    height: 4px
 
 .profil_img
     position: absolute
