--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -3,7 +3,7 @@
     background-color: #141D2F
     height: 291px
     color: #fff
-    padding: 0 170px 0 200px
+    padding: 0px 300px 0px 300px
     a
         text-decoration: none
         
