--- a/src/app/introduce/introduce.component.html
+++ b/src/app/introduce/introduce.component.html
@@ -1,4 +1,5 @@
 <div class="main_div">
+    <img class="vector" src="/assets/img/Vector.png" alt="">
     <div class="photo_div">
         <img class="profil_photo" src="/assets/img/profil.png" alt="">
         <img class="profil_shadow" src="/assets/img/photo-bgr.png" alt="">
@@ -13,7 +14,7 @@
     </div>
     <div class="contact">
         <div class="contact_images">
-            <img src="/assets/img/line.png" alt="">
+            <img class="line" src="/assets/img/line.png" alt="">
             <img src="/assets/img/git.png" alt="">
             <img src="/assets/img/Email button.png" alt="">
             <img src="/assets/img/Linkedin button.png" alt="">
@@ -24,5 +25,5 @@
         <p class="scroll_text">Scroll down</p> 
         <img src="/assets/img/arrow-down.png" alt="">
     </div>
-    <img class="vector" src="/assets/img/Vector.png" alt="">
+    
 </div>
