--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -33,8 +33,12 @@
     display: flex
     align-items: center
     gap: 80px
+    img
+        width: 300px
+        height: 4px
 
 .got_problem_div
+    opacity: 0
     display: flex
     flex-direction: column
     width: 460px
@@ -52,13 +56,14 @@
         margin: 0
 
 .form_main
-    margin-left: 200px
+    margin-left: 385px
     margin-top: 100px
-    margin-right: 200px
+    margin-right: 300px
     display: flex
     justify-content: space-between
 
 .input_div
+    transform: scale(0)
     display: flex
     flex-direction: column
 
@@ -120,7 +125,7 @@
     cursor: pointer
     margin-top: 100px
     margin-left: 580px
-    &:hover 
+    &:hover
         filter: invert(59%) sepia(94%) saturate(415%) hue-rotate(50deg) brightness(108%) contrast(92%)
 
 input, textarea
@@ -154,6 +159,7 @@ textarea
 .scale-in-hor-center
     -webkit-animation: scale-in-hor-center 4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
     animation: scale-in-hor-center 4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
+    
 
 @keyframes scale-out-horizontal
     0%
@@ -165,7 +171,7 @@ textarea
         -webkit-transform: scaleX(0)
         transform: scaleX(0)
         opacity: 1
-    90%    
+    90%
         -webkit-transform: scaleX(0)
         transform: scaleX(0)
         opacity: 1
@@ -194,3 +200,135 @@ textarea
         transform: scaleX(0)
         opacity: 1
 
+.bounce-in-left
+    -webkit-animation: bounce-in-left 1.1s both
+    animation: bounce-in-left 1.1s both
+    opacity: 1
+
+.scale-in-center
+    -webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
+    animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
+
+@-webkit-keyframes bounce-in-left
+  0% 
+    -webkit-transform: translateX(-600px)
+    transform: translateX(-600px)
+    -webkit-animation-timing-function: ease-in
+    animation-timing-function: ease-in
+    opacity: 0
+
+  38% 
+    -webkit-transform: translateX(0)
+    transform: translateX(0)
+    -webkit-animation-timing-function: ease-out
+    animation-timing-function: ease-out
+    opacity: 1
+
+  55% 
+    -webkit-transform: translateX(-68px)
+    transform: translateX(-68px)
+    -webkit-animation-timing-function: ease-in
+    animation-timing-function: ease-in
+
+  72% 
+    -webkit-transform: translateX(0)
+    transform: translateX(0)
+    -webkit-animation-timing-function: ease-out
+    animation-timing-function: ease-out
+
+  81% 
+    -webkit-transform: translateX(-28px)
+    transform: translateX(-28px)
+    -webkit-animation-timing-function: ease-in
+    animation-timing-function: ease-in
+
+  90% 
+    -webkit-transform: translateX(0)
+    transform: translateX(0)
+    -webkit-animation-timing-function: ease-out
+    animation-timing-function: ease-out
+
+  95% 
+    -webkit-transform: translateX(-8px)
+    transform: translateX(-8px)
+    -webkit-animation-timing-function: ease-in
+    animation-timing-function: ease-in
+
+  100% 
+    -webkit-transform: translateX(0)
+    transform: translateX(0)
+    -webkit-animation-timing-function: ease-out
+    animation-timing-function: ease-out
+
+@keyframes bounce-in-left
+    0%
+        -webkit-transform: translateX(-600px)
+        transform: translateX(-600px)
+        -webkit-animation-timing-function: ease-in
+        animation-timing-function: ease-in
+        opacity: 0
+
+    38%
+        -webkit-transform: translateX(0)
+        transform: translateX(0)
+        -webkit-animation-timing-function: ease-out
+        animation-timing-function: ease-out
+        opacity: 1
+
+    55%
+        -webkit-transform: translateX(-68px)
+        transform: translateX(-68px)
+        -webkit-animation-timing-function: ease-in
+        animation-timing-function: ease-in
+
+    72%
+        -webkit-transform: translateX(0)
+        transform: translateX(0)
+        -webkit-animation-timing-function: ease-out
+        animation-timing-function: ease-out
+
+    81%
+        -webkit-transform: translateX(-28px)
+        transform: translateX(-28px)
+        -webkit-animation-timing-function: ease-in
+        animation-timing-function: ease-in
+
+    90%
+        -webkit-transform: translateX(0)
+        transform: translateX(0)
+        -webkit-animation-timing-function: ease-out
+        animation-timing-function: ease-out
+
+    95%
+        -webkit-transform: translateX(-8px)
+        transform: translateX(-8px)
+        -webkit-animation-timing-function: ease-in
+        animation-timing-function: ease-in
+
+    100%
+        -webkit-transform: translateX(0)
+        transform: translateX(0)
+        -webkit-animation-timing-function: ease-out
+        animation-timing-function: ease-out
+
+@-webkit-keyframes scale-in-center
+    0% 
+        -webkit-transform: scale(0)
+        transform: scale(0)
+        opacity: 1
+
+    100% 
+        -webkit-transform: scale(1)
+        transform: scale(1)
+        opacity: 1
+
+@keyframes scale-in-center
+    0%
+        -webkit-transform: scale(0)
+        transform: scale(0)
+        opacity: 1
+
+    100%
+        -webkit-transform: scale(1)
+        transform: scale(1)
+        opacity: 1
