--- a/src/app/introduce/introduce.component.sass
+++ b/src/app/introduce/introduce.component.sass
@@ -4,14 +4,23 @@
 .vector
     position: absolute
     width: 100%
-    height: 380px
-    top: 592px
+    height: 1000px
+    top: 392px
+    z-index: 2
 
 .profil_photo
     position: absolute
-    top: -200px
-    left: -200px
-    width: 1000px
+    top: -150px
+    left: -100px
+    width : 1000px
+
+.profil_shadow
+    margin-left: 100px
+
+.line
+    width: 300px
+    height: 4px
+    pointer-events: none
 
 .i_am
     position: absolute
@@ -25,7 +34,7 @@
     position: absolute
     display: flex
     top: 300px
-    right: 10%
+    right: 15%
     color: #fff
 
 .name
