--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,11 +1,11 @@
 <div class="main_div">
-    <div class="skill_images">
+    <div class="skill_images" infiniteScroll (scrolled)="onScroll()">
         <img *ngFor="let img of skill_images; let i = index" src="/assets/img/skills/Icon{{ + i }}.png">
     </div>
     <div class="my_skills_div">
         <div class="headline">
             My skills
-            <img src="/assets/img/line2.png" alt="">
+            <img class="line" src="/assets/img/line2.png" alt="">
         </div>
         <div class="description">
             <span>I have gained experience in building projects with various front end technologies and concepts.</span>
