--- a/src/app/skills/skills.component.sass
+++ b/src/app/skills/skills.component.sass
@@ -12,7 +12,8 @@
     padding-bottom: 200px
 
 .skill_images
-    margin-left: 100px
+    opacity: 0
+    margin-left: 10%
     width: 800px
     img
         margin-right: 80px
@@ -32,8 +33,9 @@
     align-items: center
     gap: 30px
 
-.my_skills_div
-   
+.line
+    width: 300px
+    height: 4px
 
 .button_touch
     display: flex
@@ -59,6 +61,11 @@
     span
         margin: 30px 0 30px 0
 
+.flip-in-hor-bottom
+    opacity: 1
+    -webkit-animation: slit-in-vertical 0.45s ease-out both
+    animation: slit-in-vertical 0.45s ease-out both
+
 @keyframes bounce
     0%
         transform: translateY(0px)
@@ -66,3 +73,33 @@
         transform: translateY(-15px)
     100%
         transform: translateY(0px)
+
+@-webkit-keyframes slit-in-vertical
+  0% 
+    -webkit-transform: translateZ(-800px) rotateY(90deg)
+    transform: translateZ(-800px) rotateY(90deg)
+    opacity: 0
+
+  54% 
+    -webkit-transform: translateZ(-160px) rotateY(87deg)
+    transform: translateZ(-160px) rotateY(87deg)
+    opacity: 1
+
+  100% 
+    -webkit-transform: translateZ(0) rotateY(0)
+    transform: translateZ(0) rotateY(0)
+
+@keyframes slit-in-vertical
+    0%
+        -webkit-transform: translateZ(-800px) rotateY(90deg)
+        transform: translateZ(-800px) rotateY(90deg)
+        opacity: 0
+
+    54%
+        -webkit-transform: translateZ(-160px) rotateY(87deg)
+        transform: translateZ(-160px) rotateY(87deg)
+        opacity: 1 
+
+    100%
+        -webkit-transform: translateZ(0) rotateY(0)
+        transform: translateZ(0) rotateY(0)
