--- a/css/header.component.css
+++ b/css/header.component.css
@@ -7,8 +7,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 300px;
-  padding-right: 300px;
+  padding-left: 10%;
+  padding-right: 10%;
   z-index: 100;
   border-bottom: 1px solid #70E61C;
 }
@@ -53,4 +53,129 @@ a:hover {
   content: "ı";
   position: absolute;
   left: -1px;
+}
+
+.d_none {
+  display: none;
+}
+
+#menuToggle {
+  display: block;
+  position: relative;
+  top: 3px;
+  right: 50px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a {
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  -webkit-touch-callout: none;
+}
+
+/* * Just a quick hamburger
+ * */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #fff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+/* * Transform all the slices of hamburger
+ * * into a crossmark.
+ * */
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #fff;
+}
+
+/* * But let's hide the middle one.
+ * */
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/* * Ohyeah and the last one should go the other direction
+ * */
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/* * Make this absolute positioned
+ * * at the top left of the screen
+ * */
+#menu {
+  padding-top: 50px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  width: calc(100vw - 15px);
+  height: 100vh;
+  top: 86px;
+  right: -50px;
+  background: rgba(20, 29, 47, 0.8);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform: translate(100vw, 0%);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+#menu a {
+  background: unset;
+  margin-bottom: 20px;
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/* * And let's slide it in from the left
+ * */
+#menuToggle input:checked ~ div {
+  transform: none;
+}
+
+@media screen and (max-width: 800px) {
+  header {
+    padding-right: 0;
+  }
+  .link {
+    display: none;
+  }
+  .d_none {
+    display: block;
+  }
 }/*# sourceMappingURL=header.component.css.map */
