--- a/src/app/introduce/introduce.component.html
+++ b/src/app/introduce/introduce.component.html
@@ -10,20 +10,20 @@
             <div class="name">Silvio Schriefl</div>
             <div class="developer">FRONTEND DEVELOPER</div>
         </div>
-        <div class="button_talk">Let`s talk!</div>
+         <a href="#contact"><div class="button_talk">Let`s talk!</div></a>
     </div>
-    <div class="contact">
+    <div class="contact" id="about">
         <div class="contact_images">
             <img class="line" src="/assets/img/line.png" alt="">
             <img src="/assets/img/git.png" alt="">
             <img src="/assets/img/Email button.png" alt="">
             <img src="/assets/img/Linkedin button.png" alt="">
         </div>
-        <a href="">silvio.schriefl@email.de</a>
+        <a href="#contact">info@silvio-schriefl.de</a>
     </div>
     <div class="scroll">
         <p class="scroll_text">Scroll down</p> 
-        <img src="/assets/img/arrow-down.png" alt="">
+        <img class="arrow" src="/assets/img/arrow-down.png" alt="">
     </div>
     
 </div>
