--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,5 @@
-<div class="main_div">
+<div class="main_div" id="portfolio">
+    
     <div class="headline">
         <img src="/assets/img/LINE3.png" alt="">
         <span>Portfolio</span>
