--- a/src/app/skills/skills.component.sass
+++ b/src/app/skills/skills.component.sass
@@ -66,6 +66,9 @@
     -webkit-animation: slit-in-vertical 0.45s ease-out both
     animation: slit-in-vertical 0.45s ease-out both
 
+a
+    text-decoration: none
+
 @keyframes bounce
     0%
         transform: translateY(0px)
