--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,41 +1,59 @@
-<div class="main_div">
+<div class="main_div" id="contact">
     <div class="headline">
-        <img src="/assets/img/LINE3.png" alt="">
+        <img class="purple_line" src="/assets/img/LINE3.png" alt="">
         <span>Contact</span>
+        <img class="green_line d_none" src="/assets/img/greenLine.png" alt="">
     </div>
     <div class="form_main">
-        <div infiniteScroll (scrolled)="onScroll()" class="got_problem_div" #object>
-            <span class="sub_headline">Got a problem to solve?</span>
-            <span>Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to
-                your projects with my work.</span>
-            <div class="contact_me_div">
-                <span>Need a Frontend developer?</span>
-                <p>Contact me!</p>
+        <div infiniteScroll (scrolled)="onScroll()" class="got_problem_div">
+            <div class="blue_line_div">
+                <img src="/assets/img/LINE 5.png" alt="" class="d_none blue_line">
+                <span class="sub_headline">Got a problem to solve?</span>
+            </div>
+            <div class="contact_description">
+                <span>Contact me through this form, I am interested in hearing you, knowing your ideas and contributing
+                    to
+                    your projects with my work.</span>
+                <div class="contact_me_div">
+                    <span>Need a Frontend developer?</span>
+                    <p>Contact me!</p>
+                </div>
             </div>
         </div>
-        <form  infiniteScroll (scrolled)="onScroll()" class="input_div" (click)="$event.stopPropagation()" (ngSubmit)="sendMessage()">
+        <form infiniteScroll [infiniteScrollDistance]="2" (scrolled)="onScroll()" class="input_div"
+            (click)="$event.stopPropagation()" (ngSubmit)="sendMessage()">
             <div class="input_field">
-                <input name="name" (focus)="setFocus('name')" placeholder="Your name" type="text" maxlength="30" [(ngModel)]="name" (ngModelChange)="changeValue($event, 'name')" [class.border_red]="name_active && name.length == 0" [class.border_green]="name_active && name.length > 0">
+                <input name="name" (focus)="setFocus('name')" placeholder="Your name" type="text" maxlength="30"
+                    [(ngModel)]="name" (ngModelChange)="changeValue($event, 'name')"
+                    [class.border_red]="name_active && name.length == 0"
+                    [class.border_green]="name_active && name.length > 0">
                 <img [class.visible]="name_active && name.length == 0" src="/assets/img/no.png" alt="">
                 <img [class.visible]="name_active && name.length > 0" src="/assets/img/yes.png" alt="">
                 <span [class.visible]="name_active && name.length == 0" class="hide">Your name is required</span>
             </div>
             <div class="input_field">
-                <input ngModel email="true" (focus)="setFocus('email')" placeholder="Your email" type="email" name="email" maxLength="40" [(ngModel)]="email_text" (ngModelChange)="changeValue($event, 'email')" [class.border_red]="email_active || email_active && !email_valid" [class.border_green]="email_active && email_valid">
+                <input ngModel email="true" (focus)="setFocus('email')" placeholder="Your email" type="email"
+                    name="email" maxLength="40" [(ngModel)]="email_text" (ngModelChange)="changeValue($event, 'email')"
+                    [class.border_red]="email_active || email_active && !email_valid"
+                    [class.border_green]="email_active && email_valid">
                 <img [class.visible]="email_active && !email_valid" src="/assets/img/no.png" alt="">
                 <img [class.visible]="email_active && email_valid" src="/assets/img/yes.png" alt="">
-                <span [class.visible]="email_active && !email_valid" class="hide">please enter a valid email address</span>
+                <span [class.visible]="email_active && !email_valid" class="hide">please enter a valid email
+                    address</span>
             </div>
             <div class="input_field">
                 <div [class.scale-in-hor-center]="slide_in2" class="sent">The message has been sent successfully</div>
-                <textarea (focus)="setFocus('message')" placeholder="Your message" type="textarea" name='message' [(ngModel)]="message" (ngModelChange)="changeValue($event, 'message')" [class.border_red]="message_active && message.length == 0"[class.border_green]="message_active && message.length > 0"></textarea>
+                <textarea (focus)="setFocus('message')" placeholder="Your message" type="textarea" name='message'
+                    [(ngModel)]="message" (ngModelChange)="changeValue($event, 'message')"
+                    [class.border_red]="message_active && message.length == 0"
+                    [class.border_green]="message_active && message.length > 0"></textarea>
                 <img [class.visible]="message_active && message.length == 0" src="/assets/img/no.png" alt="">
                 <img [class.visible]="message.length > 0" src="/assets/img/yes.png" alt="">
                 <span [class.visible]="message_active && message.length == 0" class="hide">Your message is empty</span>
             </div>
-            <button [class.scale-out-horizontal]="slide_in" class="send_button">Send message :&rpar;</button>
-            <a href="#header"><img class="arrow_up" src="/assets/img/arrow_up.png" alt=""></a> 
+            <button [class.scale-out-horizontal]="slide_in" class="send_button" type="submit">Send message
+                :&rpar;</button>
+            <a href="#header"><img class="arrow_up" src="/assets/img/arrow_up.png" alt=""></a>
         </form>
     </div>
-    
 </div>
