--- a/src/app/introduce/introduce.component.sass
+++ b/src/app/introduce/introduce.component.sass
@@ -67,6 +67,7 @@
             transform: scale(1.3)
 
 .button_talk
+    z-index: 10
     display: flex
     justify-content: center
     align-items: center
@@ -101,3 +102,15 @@
 
 .scroll_text
     transform: rotate(90deg)
+
+.arrow
+    animation: bounce 0.5s infinite cubic-bezier(0.25, 0.1, 0.25, 1)
+
+@keyframes bounce
+    0%
+        transform: translateY(0)
+    50%
+        transform: translateY(10px)
+    100%
+        transform: translateY(0)
+        
