--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,6 +2,6 @@
 <app-introduce></app-introduce>
 <app-about-me></app-about-me>
 <app-skills></app-skills>
-<app-portfolio id="portfolio"></app-portfolio>
+<app-portfolio ></app-portfolio>
 <app-contact></app-contact>
 <app-footer></app-footer>
