--- a/css/footer.component.css
+++ b/css/footer.component.css
@@ -22,6 +22,7 @@
 }
 .logo p {
   color: #70E61C;
+  margin: 0;
 }
 
 .i {
@@ -38,7 +39,8 @@
 }
 
 .footer_sub {
-  margin-top: 60px;
+  position: relative;
+  margin-top: 120px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -55,10 +57,33 @@
 }
 
 .impressum {
+  position: absolute;
+  top: 60px;
+  left: 0;
   color: #fff;
   font-size: 16px;
   font-weight: 400;
 }
 .impressum:hover {
   color: #70E61C;
+}
+
+@media screen and (max-width: 1850px) {
+  footer {
+    padding: 0 5% 0 5% !important;
+  }
+}
+@media screen and (max-width: 750px) {
+  .footer_sub {
+    flex-direction: column;
+    margin-top: 50px;
+    gap: 15px;
+  }
+  .impressum {
+    left: unset;
+    top: 180px;
+  }
+  .icons {
+    margin-left: 40px;
+  }
 }/*# sourceMappingURL=footer.component.css.map */
