--- a/src/styles.sass
+++ b/src/styles.sass
@@ -16,6 +16,7 @@ body
     font-family: 'Poppins', sans-serif
     overflow-x: hidden
     @include scrollbar()
+    background-color: #141D2F
 
 html
     scroll-behavior: smooth
