--- a/css/about-me.component.css
+++ b/css/about-me.component.css
@@ -11,14 +11,12 @@
 
 .description {
   font-size: 16px;
-  width: 480px;
 }
 
 .description2 {
   margin-top: 50px;
   display: flex;
   font-size: 16px;
-  width: 480px;
 }
 .description2 img {
   margin-right: 20px;
@@ -47,6 +45,7 @@
 }
 
 .about_me_sub {
+  width: 480px;
   position: absolute;
   z-index: 2;
 }
@@ -68,4 +67,54 @@
   width: 1000px;
   top: -400px;
   left: -315px;
+}
+
+@media screen and (max-width: 1700px) {
+  .about_me {
+    margin-left: 10%;
+  }
+  .line {
+    width: 160px;
+  }
+}
+@media screen and (max-width: 1250px) {
+  .circle_div {
+    display: none;
+  }
+  .about_me {
+    margin: 0;
+  }
+  .about_me_sub {
+    left: calc(50% - 240px);
+  }
+}
+@media screen and (max-width: 750px) {
+  .headline {
+    font-size: 45px;
+  }
+  .description {
+    margin-top: 60px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .about_me_sub {
+    width: 80%;
+    left: calc(50% - 180px);
+  }
+}
+@media screen and (max-width: 460px) {
+  .main_div {
+    padding-bottom: 150px;
+  }
+}
+@media screen and (max-width: 430px) {
+  .about_me_sub {
+    width: 80%;
+    left: calc(50% - 145px);
+  }
+}
+@media screen and (max-width: 380px) {
+  .main_div {
+    padding-bottom: 230px;
+  }
 }/*# sourceMappingURL=about-me.component.css.map */
