--- a/src/app/portfolio/portfolio.component.sass
+++ b/src/app/portfolio/portfolio.component.sass
@@ -104,8 +104,8 @@
 
 @-webkit-keyframes slide-in-right
   0% 
-    -webkit-transform: translateX(1000px)
-    transform: translateX(1000px)
+    -webkit-transform: translateX(40%)
+    transform: translateX(40%)
     opacity: 0
 
   100% 
@@ -115,8 +115,8 @@
 
 @keyframes slide-in-right
     0%
-        -webkit-transform: translateX(1000px)
-        transform: translateX(1000px)
+        -webkit-transform: translateX(40%)
+        transform: translateX(40%)
         opacity: 0
 
     100%
@@ -126,8 +126,8 @@
 
 @-webkit-keyframes slide-in-left
   0% 
-    -webkit-transform: translateX(-1000px)
-    transform: translateX(-1000px)
+    -webkit-transform: translateX(-40%)
+    transform: translateX(-40%)
     opacity: 0
 
   100% 
@@ -137,11 +137,62 @@
 
 @keyframes slide-in-left
     0%
-        -webkit-transform: translateX(-1000px)
-        transform: translateX(-1000px)
+        -webkit-transform: translateX(-40%)
+        transform: translateX(-40%)
         opacity: 0
 
     100%
         -webkit-transform: translateX(0)
         transform: translateX(0)
         opacity: 1
+
+@media screen and ( max-width: 1600px )
+    .project
+        width: 77%
+
+@media screen and ( max-width: 1400px )
+
+    .project
+        img
+            width: 418px
+            margin-top: 20px
+
+    .main_div
+        background-position: left -100px top 1000px
+        background-size: 400px
+
+@media screen and ( max-width: 1100px )
+    .project
+        width: 85%
+
+@media screen and ( max-width: 1000px )
+    .project
+        flex-direction: column
+        align-items: center
+
+@media screen and ( max-width: 750px )
+
+    .headline
+        font-size: 45px
+        margin-left: calc(50% - 209px)
+
+    .main_div
+        background-position: left -100px top 800px
+
+    .description
+        margin-left: 0
+        margin-bottom: 10px
+        text-align: center
+        padding: 0 15px 0 15px
+
+    .project_detail
+        width: 85%
+
+    .buttons
+        gap: 20px
+
+@media screen and ( max-width: 500px )
+
+    .project
+        img
+            width: 318px
