--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,5 +1,5 @@
 <div id="skills" class="main_div">
-    <div  class="skill_images" infiniteScroll (scrolled)="onScroll()">
+    <div class="skill_images" infiniteScroll (scrolled)="onScroll()">
         <img *ngFor="let img of skill_images; let i = index" src="/assets/img/skills/Icon{{ + i }}.png">
     </div>
     <div class="my_skills_div">
@@ -9,8 +9,10 @@
         </div>
         <div class="description">
             <span>I have gained experience in building projects with various front end technologies and concepts.</span>
-            <a href="#contact"><div id="portfolio" class="button_touch">Get in touch</div></a>
+            <a href="#contact">
+                <div id="portfolio" class="button_touch">Get in touch</div>
+            </a>
         </div>
     </div>
-    
+
 </div>
