--- a/src/app/introduce/introduce.component.html
+++ b/src/app/introduce/introduce.component.html
@@ -1,8 +1,8 @@
 <div class="main_div">
     <img class="vector" src="/assets/img/Vector.png" alt="">
     <div class="photo_div">
-        <img class="profil_photo" src="/assets/img/profil.png" alt="">
-        <img class="profil_shadow" src="/assets/img/photo-bgr.png" alt="">
+        
+        <img class="profil_img" src="/assets/img/profil.png" alt="">
     </div>
     <div class="name_div">
         <div class="i_am">I am</div>
