--- a/src/app/skills/skills.component.sass
+++ b/src/app/skills/skills.component.sass
@@ -12,6 +12,7 @@
     padding-bottom: 200px
 
 .skill_images
+    box-sizing: border-box
     opacity: 0
     margin-left: 10%
     width: 800px
@@ -143,11 +144,12 @@ a
 
     .skill_images 
         margin-left: 20%
+        width: 100%
 
 @media screen and ( max-width: 750px )
 
     .skill_images 
-        width: 100%
+        
         margin: 0
         padding: 0 40px 0 120px
         box-sizing: border-box
