--- a/css/about-me.component.css
+++ b/css/about-me.component.css
@@ -2,6 +2,7 @@
   color: #fff;
   background-color: #141D2F;
   width: 100%;
+  margin-top: 500px;
 }
 
 .headline {
@@ -24,7 +25,7 @@
 
 .shadow {
   position: absolute;
-  top: 750px;
+  top: 1150px;
   right: 0;
   z-index: 2;
 }
@@ -34,7 +35,7 @@
   display: flex;
   align-items: center;
   right: 0;
-  top: 1100px;
+  top: 100px;
   z-index: 2;
 }
 
@@ -64,9 +65,10 @@
 }
 .profil_img img {
   position: absolute;
-  width: 1000px;
-  top: -400px;
-  left: -315px;
+  width: 800px;
+  top: -252px;
+  left: -175px;
+  transform: rotate(-2deg);
 }
 
 @media screen and (max-width: 1700px) {
@@ -88,6 +90,16 @@
     left: calc(50% - 240px);
   }
 }
+@media screen and (max-width: 1100px) {
+  .main_div {
+    margin-top: 200px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .shadow {
+    top: 1000px;
+  }
+}
 @media screen and (max-width: 750px) {
   .headline {
     font-size: 45px;
@@ -95,8 +107,16 @@
   .description {
     margin-top: 60px;
   }
+  .main_div {
+    margin-top: -50px;
+  }
 }
 @media screen and (max-width: 550px) {
+  .main_div {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 500px) {
   .about_me_sub {
     width: 80%;
     left: calc(50% - 180px);
