--- a/css/contact.component.css
+++ b/css/contact.component.css
@@ -396,29 +396,13 @@ textarea:placeholder-shown {
 }
 @media screen and (max-width: 1400px) {
   .form_main {
-    margin: 100px 50px 0px 65px;
-  }
-  .purple_line {
-    display: none;
-  }
-  .green_line {
-    display: block;
-    width: 100% !important;
+    margin: 100px 50px 0px 150px;
   }
   .headline {
-    justify-content: center;
-    margin-left: calc(50% - 110px);
+    justify-content: flex-start;
   }
-  .blue_line {
-    display: block;
-    width: 130px;
-    height: 4px;
-  }
-  .blue_line_div {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-left: -150px;
+  .got_problem_div {
+    margin-right: 20px;
   }
 }
 @media screen and (max-width: 1250px) {
@@ -426,22 +410,11 @@ textarea:placeholder-shown {
     flex-direction: column;
     align-items: center;
     gap: 50px;
-    margin: 50px 0 0 0;
+    margin: 50px 0 0 0px;
   }
   .got_problem_div {
-    width: 100%;
-  }
-  .blue_line_div {
-    margin-left: 0;
-  }
-  .blue_line {
-    width: calc(50% - 210px);
-  }
-  .headline {
-    margin-left: 51%;
-  }
-  .contact_description {
-    margin: 0 200px 0 200px;
+    width: 80%;
+    margin-left: 110px;
   }
 }
 @media screen and (max-width: 800px) {
@@ -455,30 +428,16 @@ textarea:placeholder-shown {
     flex-direction: column;
   }
   .contact_description {
-    margin: 0 100px 0 100px;
+    margin: 0 100px 0 0px;
   }
   .input_div {
     align-items: center;
-  }
-  .input_div input {
-    width: 500px;
-  }
-  .input_div textarea {
-    width: 500px;
   }
 }
 @media screen and (max-width: 750px) {
   .headline {
     font-size: 45px;
   }
-}
-@media screen and (max-width: 550px) {
-  .contact_description {
-    margin: 0 50px 0 50px;
-  }
-  .arrow_up {
-    margin-right: 280px;
-  }
   .input_div {
     align-items: center;
   }
@@ -488,8 +447,20 @@ textarea:placeholder-shown {
   .input_div textarea {
     width: 350px;
   }
+  .purple_line {
+    width: 75px !important;
+  }
+  .arrow_up {
+    margin-right: 0;
+    margin-left: 320px;
+  }
+}
+@media screen and (max-width: 550px) {
   .sub_headline {
     font-size: 23px;
+  }
+  .got_problem_div {
+    margin-left: 75px;
   }
 }
 @media screen and (max-width: 400px) {
@@ -503,6 +474,6 @@ textarea:placeholder-shown {
     width: 300px;
   }
   .arrow_up {
-    margin-right: 330px;
+    margin-left: 250px;
   }
 }/*# sourceMappingURL=contact.component.css.map */
