--- a/css/header.component.css
+++ b/css/header.component.css
@@ -55,127 +55,84 @@ a:hover {
   left: -1px;
 }
 
-.d_none {
-  display: none;
-}
-
-#menuToggle {
-  display: block;
+.hamburger-icon-container {
+  height: 20px;
+  width: 20px;
   position: relative;
-  top: 3px;
-  right: 50px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle a {
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-#menuToggle input {
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
   cursor: pointer;
-  opacity: 0;
-  z-index: 2;
-  -webkit-touch-callout: none;
-}
-
-/* * Just a quick hamburger
- * */
-#menuToggle span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  background: #fff;
   border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 }
 
-#menuToggle span:first-child {
-  transform-origin: 0% 0%;
+.hamburger-icon,
+.hamburger-icon:before,
+.hamburger-icon:after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 1.7em;
+  background: white;
+  transition: all 0.2s ease;
 }
 
-#menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
+.hamburger-icon {
+  top: 0.75em;
+}
+.hamburger-icon:before {
+  top: -0.55em;
+}
+.hamburger-icon:after {
+  top: 0.55em;
 }
 
-/* * Transform all the slices of hamburger
- * * into a crossmark.
- * */
-#menuToggle input:checked ~ span {
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #fff;
+.overflow body {
+  overflow-y: hidden;
 }
 
-/* * But let's hide the middle one.
- * */
-#menuToggle input:checked ~ span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/* * Ohyeah and the last one should go the other direction
- * */
-#menuToggle input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/* * Make this absolute positioned
- * * at the top left of the screen
- * */
-#menu {
-  padding-top: 50px;
-  box-sizing: border-box;
+.mobile_menu {
+  color: #fff;
+  position: fixed;
+  background-color: rgba(20, 29, 47, 0.8);
+  top: 100px;
+  height: 152vh;
+  width: 100%;
+  left: 0;
+  z-index: 11;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  width: calc(100vw - 15px);
-  height: 100vh;
-  top: 86px;
-  right: -50px;
-  background: rgba(20, 29, 47, 0.8);
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  transform: translate(100vw, 0%);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  padding-top: 300px;
+  gap: 20px;
+  transition: 300ms;
+  transform: translateX(100%);
 }
-#menu a {
-  background: unset;
-  margin-bottom: 20px;
+.mobile_menu a {
+  background-size: 100% 0px, 0 0px;
+  margin-left: 36px;
 }
 
-#menu li {
-  padding: 10px 0;
-  font-size: 22px;
+.slide_in {
+  transform: translateX(0);
 }
 
-/* * And let's slide it in from the left
- * */
-#menuToggle input:checked ~ div {
-  transform: none;
+.hamburger-active .hamburger-icon {
+  background: transparent;
+  transform: rotate(-135deg);
+}
+
+.hamburger-active .hamburger-icon:before,
+.hamburger-active .hamburger-icon:after {
+  top: 0;
+}
+
+.hamburger-active .hamburger-icon:before {
+  transform: rotate(90deg);
 }
 
 @media screen and (max-width: 800px) {
-  header {
-    padding-right: 0;
-  }
   .link {
     display: none;
   }
-  .d_none {
+  .hamburger-icon-container {
     display: block;
   }
 }/*# sourceMappingURL=header.component.css.map */
