--- a/css/skills.component.css
+++ b/css/skills.component.css
@@ -13,6 +13,7 @@
 }
 
 .skill_images {
+  box-sizing: border-box;
   opacity: 0;
   margin-left: 10%;
   width: 800px;
@@ -163,11 +164,11 @@ a {
 @media screen and (max-width: 1000px) {
   .skill_images {
     margin-left: 20%;
+    width: 100%;
   }
 }
 @media screen and (max-width: 750px) {
   .skill_images {
-    width: 100%;
     margin: 0;
     padding: 0 40px 0 120px;
     box-sizing: border-box;
