--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -159,7 +159,6 @@ textarea
 .scale-in-hor-center
     -webkit-animation: scale-in-hor-center 4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
     animation: scale-in-hor-center 4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
-    
 
 @keyframes scale-out-horizontal
     0%
@@ -353,47 +352,24 @@ textarea
 @media screen and ( max-width: 1400px )
 
     .form_main
-        margin: 100px 50px 0px 65px
-  
-    .purple_line
-        display: none
-    .green_line
-        display: block
-        width: 100% !important
-    .headline
-        justify-content: center
-        margin-left: calc( 50% - 110px )
+        margin: 100px 50px 0px 150px
 
-    .blue_line
-        display: block
-        width: 130px
-        height: 4px
-    .blue_line_div
-        display: flex
-        align-items: center
-        gap: 20px
-        margin-left: -150px
+    .headline
+        justify-content: flex-start
+
+    .got_problem_div
+        margin-right: 20px
 
 @media screen and ( max-width: 1250px )
     .form_main
         flex-direction: column
         align-items: center
         gap: 50px
-        margin: 50px 0 0 0
+        margin: 50px 0 0 0px
 
-    .got_problem_div 
-        width: 100%
-    .blue_line_div
-        margin-left: 0
-
-    .blue_line
-        width: calc( 50% - 210px )
-
-    .headline
-        margin-left: 51%
-
-    .contact_description
-        margin: 0 200px 0 200px
+    .got_problem_div
+        width: 80%
+        margin-left: 110px
 
 @media screen and ( max-width: 800px )
 
@@ -407,41 +383,41 @@ textarea
         flex-direction: column
 
     .contact_description
-        margin: 0 100px 0 100px
+        margin: 0 100px 0 0px
 
-    .input_div 
+    .input_div
         align-items: center
-        input
-            width: 500px
-        textarea
-            width: 500px
-    
+
 @media screen and ( max-width: 750px )
 
     .headline
         font-size: 45px
 
-@media screen and ( max-width: 550px )
-
-    .contact_description
-        margin: 0 50px 0 50px
-
-    .arrow_up
-        margin-right: 280px
-
-    .input_div 
+    .input_div
         align-items: center
         input
             width: 350px
         textarea
             width: 350px
+
+    .purple_line
+        width: 75px !important
+
+    .arrow_up
+        margin-right: 0
+        margin-left: 320px
+
+@media screen and ( max-width: 550px )
 
     .sub_headline
         font-size: 23px
 
+    .got_problem_div
+        margin-left: 75px
+
 @media screen and ( max-width: 400px )
 
-    .input_div 
+    .input_div
         align-items: center
         input
             width: 300px
@@ -449,6 +425,4 @@ textarea
             width: 300px
 
     .arrow_up
-        margin-right: 330px
-
-        
+        margin-left: 250px
