--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -48,124 +48,74 @@ a
         position: absolute
         left: -1px
 
-.d_none
-    display: none
-
-#menuToggle
-    display: block
+.hamburger-icon-container
+    height: 20px
+    width: 20px
     position: relative
-    top: 3px
-    right: 50px
-    z-index: 1
-    -webkit-user-select: none
-    user-select: none
-
-#menuToggle a
-    text-decoration: none
-    transition: color 0.3s ease
-
-#menuToggle input
-    display: block
-    width: 40px
-    height: 32px
-    position: absolute
-    top: -7px
-    left: -5px
     cursor: pointer
-    opacity: 0 /* hide this */
-    z-index: 2 /* and place it over the hamburger */
-    -webkit-touch-callout: none
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-    display: block
-    width: 33px
-    height: 4px
-    margin-bottom: 5px
-    position: relative
-    background: #fff
     border-radius: 3px
-    z-index: 1
-    transform-origin: 4px 0px
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease
 
-#menuToggle span:first-child
+.hamburger-icon,
+.hamburger-icon:before,
+.hamburger-icon:after
+    content: ''
+    position: absolute
+    height: 3px
+    width: 1.7em
+    background: white
+    transition: all .2s ease
 
-    transform-origin: 0% 0%
+.hamburger-icon
+    top: 0.75em
 
-#menuToggle span:nth-last-child(2)
+    &:before
+        top: -0.55em
 
-    transform-origin: 0% 100%
+    &:after
+        top: 0.55em
 
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
+.overflow
+    body
+        overflow-y: hidden
 
-    opacity: 1
-    transform: rotate(45deg) translate(-2px, -1px)
-    background: #fff
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-
-    opacity: 0
-    transform: rotate(0deg) scale(0.2, 0.2)
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-
-    transform: rotate(-45deg) translate(0, -1px)
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu
-    padding-top: 50px
-    box-sizing: border-box
+.mobile_menu
+    color: #fff
+    position: fixed
+    background-color: #141D2FCC
+    top: 100px
+    height: 152vh
+    width: 100%
+    left: 0
+    z-index: 11
     display: flex
     flex-direction: column
     align-items: center
-    position: absolute
-    width: calc( 100vw - 15px )
-    height: 100vh
-    top: 86px
-    right: -50px
-    background: #141D2FCC
-    list-style-type: none
-    -webkit-font-smoothing: antialiased
-    transform: translate(100vw, 0%)
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
+    padding-top: 300px
+    gap: 20px
+    transition: 300ms
+    transform: translateX(100%)
     a
-        background: unset
-        margin-bottom: 20px
+        background-size: 100% 0px, 0 0px
+        margin-left: 36px
 
+.slide_in
+    transform: translateX(0)
 
-#menu li
+.hamburger-active .hamburger-icon
+    background: transparent
+    transform: rotate(-135deg)
 
-    padding: 10px 0
-    font-size: 22px
+.hamburger-active .hamburger-icon:before,
+.hamburger-active .hamburger-icon:after
+    top: 0
 
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ div
-    transform: none
+.hamburger-active .hamburger-icon:before
+    transform: rotate(90deg)
 
 @media screen and ( max-width: 800px )
 
-    header
-        padding-right: 0
     .link
         display: none
 
-    .d_none
+    .hamburger-icon-container
         display: block
