--- a/src/app/impressum/impressum.component.sass
+++ b/src/app/impressum/impressum.component.sass
@@ -1,8 +1,8 @@
 .impressum
     background-color: #141D2F
     color: #fff
-    padding-left: 300px
-    padding-right: 300px
+    padding-left: 10%
+    padding-right: 10%
     padding-top: 100px
     h1
         margin-top: 0
