--- a/src/app/introduce/introduce.component.sass
+++ b/src/app/introduce/introduce.component.sass
@@ -5,17 +5,16 @@
     position: absolute
     width: 100%
     height: 1000px
-    top: 392px
+    top: 940px
     z-index: 2
 
-.profil_photo
-    position: absolute
-    top: -150px
-    left: -100px
-    width : 1000px
-
-.profil_shadow
-    margin-left: 100px
+.photo_div
+    background-image: url("/assets/img/photo-bgr.png")
+    background-repeat: no-repeat
+    background-size: auto
+    height: 800px
+    margin-top: 100px
+    margin-left: 150px
 
 .line
     width: 300px
@@ -33,6 +32,7 @@
 .name_div
     position: absolute
     display: flex
+    flex-direction: column
     top: 300px
     right: 15%
     color: #fff
@@ -52,7 +52,7 @@
     z-index: 10
     display: flex
     position: absolute
-    top: 850px
+    top: 1410px
     a
         color: #fff
         text-decoration: none
@@ -113,4 +113,137 @@
         transform: translateY(10px)
     100%
         transform: translateY(0)
+
+@media screen and ( max-width: 1750px )
+
+    .main_div
+        padding-bottom: 450px
+
+    .name_div
+        right: unset
+        z-index: 10
+        top: 1400px
+        left: calc( 50% - 280px )
+
+    .contact
+        top: 1750px
+
+    .vector
+        height: 300px
+        top: 1200px
+
+    .photo_div
+        margin-left: calc( 50% - 466px )
+
+@media screen and ( max-width: 1100px )
+    .profil_img
+        width: 600px
+
+    .photo_div
+        margin-left: calc( 50% - 322px )
+
+    .vector
+        height: 300px
+        top: 924px
+
+    .name_div
+        top: 1100px
+
+    .contact
+        top: 1450px
+
+@media screen and ( max-width: 900px )
+    .contact
+        a
+            display: none
+
+    .scroll
+        display: none
+
+@media screen and ( max-width: 750px )
+
+    .name
+        font-size: 45px
+
+    .developer
+        margin-top: 20px
+        font-size: 29px
+
+    .i_am
+        font-size: 32px
+        left: -64px
+        top: 28px
+
+    .name_div
+        left: calc( 50% - 135px )
+        top: 900px
+
+    .button_talk
+        left: calc( 15% - 10px )
+        top: 177px
+
+    .profil_img
+        width: 450px
+
+    .photo_div
+        margin-left: calc( 50% - 242px )
+
+    .vector
+        top: 700px
+        height: 400px
+
+    .contact
+        top: 1250px
+
+@media screen and ( max-width: 580px )
+
+    .line
+        width: 80px
+
+@media screen and ( max-width: 500px )
+    .profil_img
+        width: 300px
+
+    .photo_div
+        margin-left: calc( 50% - 152px )
+        background-size: 110%
+        background-position-x: center
+
+    .vector
+        height: 208px
+        top: 570px
+
+    .name_div
+        top: 700px
+
+    .contact
+        top: 1000px
+
+    .main_div
+        padding-bottom: 100px
+
+@media screen and ( max-width: 420px )
+
+    .name
+        font-size: 35px
+
+    .developer
+        font-size: 22px
+
+    .i_am
+        font-size: 22px
+        left: -47px
+        top: 25px
+
+    .name_div
+        left: calc( 50% - 102px )
         
+
+    .contact
+      top: 950px
+
+    .button_talk
+        top: 130px
+
+    .main_div
+        padding-bottom: 50px
