--- a/css/portfolio.component.css
+++ b/css/portfolio.component.css
@@ -1,4 +1,5 @@
 .main_div {
+  scroll-padding-margin: 500px;
   position: relative;
   background-color: #141D2F;
   color: #fff;
@@ -6,6 +7,14 @@
   background-image: url("/assets/img/Purple shadow 3.png");
   background-repeat: no-repeat;
   background-position: left 0px top 1400px;
+}
+
+#portfolio:before {
+  display: block;
+  content: " ";
+  margin-top: -200px;
+  height: 200px;
+  visibility: hidden;
 }
 
 .headline {
@@ -38,6 +47,7 @@
 }
 
 .project {
+  z-index: 1;
   width: 60%;
   display: flex;
   align-items: center;
@@ -87,6 +97,7 @@
 }
 
 .button_git {
+  font-size: 23px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -201,7 +212,7 @@
     margin-left: calc(50% - 209px);
   }
   .main_div {
-    background-position: left -100px top 800px;
+    background-position: left -200px top 1000px;
   }
   .description {
     margin-left: 0;
