--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
-<div class="main_div">
+<div class="main_div" id="about">
     <img class="shadow" src="/assets/img/Purple shadow 2.png" alt="">
-    
+
     <div class="about_me">
         <div class="circle_div">
             <img src="/assets/img/kreis.png" alt="">
@@ -13,27 +13,23 @@
             <div class="headline">
                 About me
                 <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates commodi iure dolorem vitae
-                    placeat
-                    asperiores pariatur animi quod minus. Dignissimos quas qui consectetur laudantium ducimus beatae
-                    excepturi sunt soluta aliquam.
+                    Hey, nice to meet you!
+
+                    I am Silvio, a German-speaking Frontend Developer near Munich with experience in building web apps
+                    with
+                    JavaScript & Angular. I have written projects alone or in teams, based on clean
+                    code principles. You're welcome to visit my public portfolio.
                 </div>
             </div>
             <div class="description2">
                 <img src="/assets/img/glühbirne.svg" alt="">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet impedit adipisci amet
-                blanditiis.
-                Laborum, beatae ipsum totam delectus officiis sunt explicabo unde voluptas veritatis eum voluptates
-                ratione
-                rerum repellendus.
+                I am fascinated by the variety of possibilities in programming. Building projects from scratch and the
+                sense of achievement after finishing them are one of my favorite aspects. I am looking for an opportunity to prove my skills as a junior frontend developer.
             </div>
             <div class="description2">
                 <img src="/assets/img/puzzle.svg" alt="">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet impedit adipisci amet
-                blanditiis.
-                Laborum, beatae ipsum totam delectus officiis sunt explicabo unde voluptas veritatis eum voluptates
-                ratione
-                rerum repellendus.
+                I am very glad to have found my place in the world of programming, now I am seeking a place in a great team.
+                My goal is to constantly learn and grow. I am highly motivated and excited to master new challenges and to learn from them every day.
             </div>
         </div>
     </div>
