--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,16 +6,16 @@
             </div>
         </a>
         
-        <a class="impressum" routerLink="./impressum">Impressum</a>
+        <a class="impressum" routerLink="./impressum">Imprint</a>
         
 
         <span>
             © Silvio Schriefl 2023
         </span>
         <div class="icons">
-            <a href=""><img src="/assets/img/git.png" alt=""></a>
-            <a href=""><img src="/assets/img/Email button.png" alt=""></a>
-            <a href=""><img src="/assets/img/Linkedin button.png" alt=""></a>
+            <a target="_blank" href="https://github.com/SilvioSchriefl"><img src="/assets/img/git.png" alt=""></a>
+            <a href="mailto:info@silvio-schriefl.de"><img src="/assets/img/Email button.png"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/silvio-schriefl-31855427a/"><img src="/assets/img/Linkedin button.png" alt=""></a>
         </div>
     </div>
 </footer>
