--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -10,7 +10,7 @@
         Silvio Schriefl<br>
     </p>
     <p><strong>Kontakt:</strong> <br>
-        Telefon: 0173-123<br>
+        Telefon: 0173-2419555<br>
         E-Mail: <a href='mailto:silvio.schriefl@email.de'>silvio.schriefl@email.de</a><br></p>
     <p><strong>Haftungsausschluss: </strong><br><br><strong>Haftung für Inhalte</strong><br><br>
         Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und
