--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,6 @@
 <div class="main_div" id="portfolio">
-    
-    <div class="headline">
-        <img src="/assets/img/LINE3.png" alt="">
+    <div  class="headline" >
+        <img src="/assets/img/LINE3.png">
         <span>Portfolio</span>
         <div class="line">
             <img src="/assets/img/LINE 4.png" alt="">
