--- a/css/contact.component.css
+++ b/css/contact.component.css
@@ -24,9 +24,8 @@
   color: #fff;
   width: 100%;
   padding-bottom: 100px;
-  top: 5030px;
   z-index: -2;
-  padding-top: 100px;
+  padding-top: 200px;
   background-image: url("/assets/img/Purple shadow 4.png");
   background-repeat: no-repeat;
   background-position: left 0px bottom -100px;
@@ -130,10 +129,20 @@
   cursor: pointer;
   transition: 300ms;
   font-size: 23px;
+  border: none;
 }
 .send_button:hover {
   background-color: #9747FF;
   transform: scale(1.1);
+}
+
+.dend_button_disabled {
+  background-color: rgba(112, 230, 28, 0.1254901961);
+}
+.dend_button_disabled:hover {
+  cursor: not-allowed;
+  background-color: rgba(112, 230, 28, 0.1254901961);
+  transform: scale(1);
 }
 
 .sent {
@@ -352,16 +361,12 @@ textarea:placeholder-shown {
   }
 }
 @-webkit-keyframes scale-in-center {
-  0% {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-  }
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
 }
 @keyframes scale-in-center {
   0% {
@@ -388,7 +393,7 @@ textarea:placeholder-shown {
     margin: 100px 100px 0px 150px;
   }
   .headline {
-    gap: 40px;
+    gap: 30px;
   }
   .headline img {
     width: 100px;
@@ -414,7 +419,7 @@ textarea:placeholder-shown {
   }
   .got_problem_div {
     width: 80%;
-    margin-left: 110px;
+    margin-left: 60px;
   }
 }
 @media screen and (max-width: 800px) {
