--- a/css/introduce.component.css
+++ b/css/introduce.component.css
@@ -38,8 +38,8 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 300px;
-  right: 15%;
+  top: 460px;
+  right: 350px;
   color: #fff;
 }
 
@@ -111,8 +111,8 @@
   gap: 30px;
   color: #fff;
   position: absolute;
-  top: 800px;
-  right: 5%;
+  top: 1000px;
+  right: 310px;
 }
 .scroll img {
   width: 20px;
@@ -137,6 +137,11 @@
     transform: translateY(0);
   }
 }
+@media screen and (max-width: 1900px) {
+  .name_div {
+    right: 250px;
+  }
+}
 @media screen and (max-width: 1750px) {
   .main_div {
     padding-bottom: 450px;
@@ -157,6 +162,12 @@
   .photo_div {
     margin-left: calc(50% - 466px);
   }
+  .line {
+    width: 120px;
+  }
+  .scroll {
+    right: 120px;
+  }
 }
 @media screen and (max-width: 1100px) {
   .profil_img {
@@ -175,12 +186,12 @@
   .contact {
     top: 1450px;
   }
-}
-@media screen and (max-width: 900px) {
-  .contact a {
+  .scroll {
     display: none;
   }
-  .scroll {
+}
+@media screen and (max-width: 900px) {
+  .email {
     display: none;
   }
 }
