--- a/css/skills.component.css
+++ b/css/skills.component.css
@@ -1,21 +1,22 @@
 .main_div {
+  z-index: 1;
   position: relative;
   background-color: #141D2F;
   color: #fff;
   width: 100%;
   display: flex;
-  padding-top: 200px;
   justify-content: space-between;
   background-image: url("/assets/img/Green shadow 2 (1).png");
   background-repeat: no-repeat;
-  background-position: left 0px top 100px;
+  background-position: left 0px top 50px;
+  padding-top: 200px;
   padding-bottom: 200px;
 }
 
 .skill_images {
   box-sizing: border-box;
   opacity: 0;
-  margin-left: 10%;
+  margin-left: 300px;
   width: 800px;
 }
 .skill_images img {
@@ -38,10 +39,11 @@
   display: flex;
   align-items: center;
   gap: 30px;
+  text-align: center;
 }
 
 .line {
-  width: 300px;
+  width: 350px;
   height: 4px;
 }
 
@@ -133,22 +135,24 @@ a {
     padding-bottom: 300px;
   }
   .my_skills_div {
+    z-index: 5;
     width: 100%;
     justify-content: center;
   }
   .description {
     width: unset;
+    align-items: flex-start;
   }
   .description span {
     width: 300px;
-    margin: 75px;
+    margin: 20px 75px 75px 154px;
   }
   .headline {
     flex-direction: row-reverse;
     justify-content: flex-end;
   }
   .line {
-    width: 100px;
+    width: 120px;
   }
   .button_touch {
     position: absolute;
@@ -166,6 +170,14 @@ a {
     margin-left: 20%;
     width: 100%;
   }
+  .button_touch {
+    top: 900px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .button_touch {
+    top: 1000px;
+  }
 }
 @media screen and (max-width: 750px) {
   .skill_images {
@@ -181,7 +193,12 @@ a {
     font-size: 45px;
   }
   .button_touch {
-    top: 920px;
+    top: 790px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .button_touch {
+    top: 900px;
   }
 }
 @media screen and (max-width: 620px) {
@@ -196,6 +213,13 @@ a {
   .skill_images img {
     margin-right: 20px;
     margin-top: 0px;
+  }
+  .line {
+    width: 30px;
+  }
+  .description span {
+    margin-left: 60px;
+    margin-top: 20px;
   }
 }
 @media screen and (max-width: 440px) {
