--- a/src/app/about-me/about-me.component.sass
+++ b/src/app/about-me/about-me.component.sass
@@ -2,7 +2,14 @@
     color: #fff
     background-color: #141D2F
     width: 100%
-    margin-top: 500px
+    margin-top: 550px
+
+#about:before
+    display: block
+    content: " "
+    margin-top: -200px
+    height: 200px
+    visibility: hidden
 
 .headline
     font-size: 90px
@@ -58,6 +65,11 @@
         top: -252px
         left: -175px
         transform: rotate(-2deg)
+    
+@media screen and ( max-width: 1750px )
+
+    .main_div
+        margin-top: 450px
 
 @media screen and ( max-width: 1700px )
 
@@ -66,6 +78,11 @@
 
     .line
         width: 160px
+
+    .shadow
+        top: 1620px
+
+    
 
 @media screen and ( max-width: 1250px )
 
@@ -81,12 +98,7 @@
 @media screen and ( max-width: 1100px )
 
     .main_div
-        margin-top: 200px
-
-@media screen and ( max-width: 1000px )
-
-    .shadow
-        top: 1000px
+        margin-top: 100px
 
 @media screen and ( max-width: 750px )
 
@@ -97,18 +109,19 @@
         margin-top: 60px
 
     .main_div
-        margin-top: -50px
-
-@media screen and ( max-width: 550px )
-
-    .main_div
-        margin-top: 0
+        margin-top: -250px
 
 @media screen and ( max-width: 500px )
 
     .about_me_sub
         width: 80%
         left: calc( 50% - 180px )
+
+    .shadow
+        top: 1000px
+
+    .main_div
+        margin-top: 0
 
 @media screen and ( max-width: 460px )
 
