--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -20,9 +20,8 @@
     color: #fff
     width: 100%
     padding-bottom: 100px
-    top: 5030px
     z-index: -2
-    padding-top: 100px
+    padding-top: 200px
     background-image: url("/assets/img/Purple shadow 4.png")
     background-repeat: no-repeat
     background-position: left 0px bottom -100px
@@ -109,9 +108,17 @@
     cursor: pointer
     transition: 300ms
     font-size: 23px
+    border: none
     &:hover
         background-color: #9747FF
         transform: scale(1.1)
+
+.dend_button_disabled
+    background-color: #70E61C20
+    &:hover
+        cursor: not-allowed
+        background-color: #70E61C20
+        transform: scale(1)
 
 .sent
     transition: 0.5s
@@ -312,14 +319,14 @@ textarea
 
 @-webkit-keyframes scale-in-center
     0% 
-        -webkit-transform: scale(0)
-        transform: scale(0)
-        opacity: 1
+    -webkit-transform: scale(0)
+    transform: scale(0)
+    opacity: 1
 
     100% 
-        -webkit-transform: scale(1)
-        transform: scale(1)
-        opacity: 1
+    -webkit-transform: scale(1)
+    transform: scale(1)
+    opacity: 1
 
 @keyframes scale-in-center
     0%
@@ -345,7 +352,7 @@ textarea
         margin: 100px 100px 0px 150px
 
     .headline
-        gap: 40px
+        gap: 30px
         img
             width: 100px
 
@@ -369,7 +376,7 @@ textarea
 
     .got_problem_div
         width: 80%
-        margin-left: 110px
+        margin-left: 60px
 
 @media screen and ( max-width: 800px )
 
