--- a/src/app/introduce/introduce.component.html
+++ b/src/app/introduce/introduce.component.html
@@ -12,14 +12,14 @@
         </div>
          <a href="#contact"><div class="button_talk">Let`s talk!</div></a>
     </div>
-    <div class="contact" id="about">
+    <div class="contact">
         <div class="contact_images">
             <img class="line" src="/assets/img/line.png" alt="">
             <a target="_blank" href="https://github.com/SilvioSchriefl"><img src="/assets/img/git.png" alt=""></a>
-            <a href="#contact"> <img src="/assets/img/Email button.png" alt=""></a>
+            <a href="mailto:info@silvio-schriefl.de"><img src="/assets/img/Email button.png" alt=""></a>
             <a target="_blank" href="https://www.linkedin.com/in/silvio-schriefl-31855427a/"><img src="/assets/img/Linkedin button.png" alt=""></a>
         </div>
-        <a href="#contact">info@silvio-schriefl.de</a>
+        <a class="email" href="#contact">info@silvio-schriefl.de</a>
     </div>
     <div class="scroll">
         <p class="scroll_text">Scroll down</p> 
