--- a/src/app/introduce/introduce.component.sass
+++ b/src/app/introduce/introduce.component.sass
@@ -33,8 +33,8 @@
     position: absolute
     display: flex
     flex-direction: column
-    top: 300px
-    right: 15%
+    top: 460px
+    right: 350px
     color: #fff
 
 .name
@@ -96,8 +96,8 @@
     gap: 30px
     color: #fff
     position: absolute
-    top: 800px
-    right: 5%
+    top: 1000px
+    right: 310px
     img
         width: 20px
 
@@ -114,6 +114,11 @@
         transform: translateY(10px)
     100%
         transform: translateY(0)
+
+@media screen and ( max-width: 1900px )
+
+    .name_div
+        right: 250px
 
 @media screen and ( max-width: 1750px )
 
@@ -136,6 +141,12 @@
     .photo_div
         margin-left: calc( 50% - 466px )
 
+    .line
+        width: 120px
+    
+    .scroll
+        right: 120px
+
 @media screen and ( max-width: 1100px )
     .profil_img
         width: 600px
@@ -152,13 +163,13 @@
 
     .contact
         top: 1450px
-
-@media screen and ( max-width: 900px )
-    .contact
-        a
+    .scroll
             display: none
 
-    .scroll
+@media screen and ( max-width: 900px )
+    
+
+    .email
         display: none
 
 @media screen and ( max-width: 750px )
