--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -10,9 +10,8 @@
         <div class="description">
             <span>I have gained experience in building projects with various front end technologies and concepts.</span>
             <a href="#contact">
-                <div id="portfolio" class="button_touch">Get in touch</div>
+                <div  class="button_touch">Get in touch</div>
             </a>
         </div>
     </div>
-
 </div>
